lab1/Test/L1-A-6-56.output
Error Type B at Line 4
Error Type B at Line 6
Error Type B at Line 7
Error Type B at Line 8
Error Type B at Line 11
Error Type B at Line 13
Error Type A at Line 13
