lab1/Test/L1-A-6-56.cmm
float RvAsvZG3 ( ) {
  int EbfEan [ 829907757 ] [ 1494392210 ] , Q6biS2sLE9HcyqIhl04u 
    
  float W7JW , Ul ;
  struct _S6JBWI eA9PfnWa4B0VIxAOY 
}
struct sS_2hJQiAFKiVGd 810845132 XShP7z ( ) {
  struct GqXe < HuevUoDJ6lCU_b1_E , JkcD0CGr8u_0xMU 
    ;
  struct {
else   }rniAki1 ;
}
n0a97hqbqQiggo2VJ ^